# row_id_generator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  performance_dashboard.html  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: test.yml
docs/: TEST_AUTOMATION.md  api.md  architecture-diagram.md  guide.md  observability.md
examples/: README.md  advanced_usage.py  basic_usage.py  column_introspection.py  snowflake_sha256_demo.py
observability/: __init__.py  alerting.py  config.py  dashboard.py  logger.py  metrics.py  monitor.py
row_id_generator/: __init__.py  benchmarks.py  cli.py  core.py  observable.py  snowflake_integration.py  utils.py
scripts/: run_tests.py
tests/: __init__.py  coverage_analysis.py  test_benchmarks.py  test_core.py  test_core_functions.py  test_edge_cases.py  test_integration_simple.py  test_integration_workflows.py  test_observable.py  test_performance.py  test_runner.py  test_snowflake_integration.py  test_utils.py
